feat(groceries): add layout support

--- a/src/app/views/error.ejs
+++ b/src/app/views/error.ejs
@@ -1,14 +1,8 @@
 <html>
-<head>
-	<title>Error</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="color-scheme" content="light dark">
-	<link rel="stylesheet" href="/css/pico.min.css">
-</head>
-<body class="container">
-	<h1>Error</h1>
-	<p>Oops! Something went wrong.</p>
-	<p>Our team has been notified and is working to resolve the issue.</p>
-</body>
+	<%- include('_head', {title: "Grocery List"}) %>
+	<body class="container">
+		<h1>Error</h1>
+		<p>Oops! Something went wrong.</p>
+		<p>Our team has been notified and is working to resolve the issue.</p>
+	</body>
 </html>
