--- a/src/app/views/partials/_head.ejs
+++ b/src/app/views/partials/_head.ejs
@@ -4,4 +4,5 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="color-scheme" content="light dark">
 	<link rel="stylesheet" href="/css/pico.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/html5-boilerplate@9.0.1/dist/css/style.min.css">
 </head>
