chore: use hotwire/tubo for formˆ

--- a/src/app/views/list/_table.ejs
+++ b/src/app/views/list/_table.ejs
@@ -5,9 +5,9 @@
 			<th>Actions</th>
 		</tr>
 	</thead>
-	<tbody>
+	<tbody id="lists-items">
 		<% products.forEach(({name, id}) => { %>
-			<tr>
+			<tr id="list-<%= id %>" >
 				<td><%= name %></td>
 				<td>
 					<a href="/lists/<%= id %>">Edit</a>
