--- a/src/app/views/partials/_head.ejs
+++ b/src/app/views/partials/_head.ejs
@@ -5,4 +5,5 @@
 	<meta name="color-scheme" content="light dark">
 	<link rel="stylesheet" href="/css/pico.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/html5-boilerplate@9.0.1/dist/css/style.min.css">
+	<script src="/js/app.js" defer></script>
 </head>
